[FAB-18315] Add operations endpoint to swagger spec
 - Updates swagger spec to be generalized for fabric with each server
 separated into groups (with swagger tags)
 - Add check-swagger to basic-checks
