# swagger/swagger-fabric.json
@@ -11,8 +11,8 @@
   ],
   "swagger": "2.0",
   "info": {
-    "description": "Package main is the entrypoint for the orderer binary\nand calls only into the server.Main() function.  No other\nfunction should be included in this package.",
-    "title": "Orderer API",
+    "description": "Hyperledger Fabric is an enterprise-grade permissioned distributed ledger framework for developing\nsolutions and applications. Its modular and versatile design satisfies a broad range of industry use\ncases. It offers a unique approach to consensus that enables performance at scale while preserving privacy.",
+    "title": "Fabric API",
     "license": {
       "name": "Copyright IBM Corp. All Rights Reserved."
     },
@@ -45,7 +45,6 @@
         "operationId": "joinChannel",
         "parameters": [
           {
-            "type": "string",
             "description": "up-to-date config block for the channel.",
             "name": "configBlock",
             "in": "formData",
@@ -132,6 +131,90 @@
           }
         }
       }
+    },
+    "/healthz": {
+      "get": {
+        "tags": [
+          "operations"
+        ],
+        "summary": "Retrieves all registered health checkers for the process.",
+        "operationId": "healthz",
+        "responses": {
+          "200": {
+            "description": "Ok."
+          },
+          "503": {
+            "description": "Service unavailable."
+          }
+        }
+      }
+    },
+    "/logspec": {
+      "get": {
+        "tags": [
+          "operations"
+        ],
+        "summary": "Retrieves the active logging spec for a peer or orderer.",
+        "operationId": "logspec",
+        "responses": {
+          "200": {
+            "description": "Ok."
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "operations"
+        ],
+        "summary": "Updates the active logging spec for a peer or orderer.",
+        "operationId": "logspec",
+        "parameters": [
+          {
+            "description": "The payload must consist of a single attribute named spec.",
+            "name": "payload",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/spec"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No content."
+          },
+          "400": {
+            "description": "Bad request."
+          }
+        }
+      }
+    },
+    "/metrics": {
+      "get": {
+        "tags": [
+          "operations"
+        ],
+        "operationId": "metrics",
+        "responses": {
+          "200": {
+            "description": "Ok."
+          }
+        }
+      }
+    },
+    "/version": {
+      "get": {
+        "tags": [
+          "operations"
+        ],
+        "summary": "Returns the orderer or peer version and the commit SHA on which the release was created.",
+        "operationId": "version",
+        "responses": {
+          "200": {
+            "description": "Ok."
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -212,12 +295,27 @@
       },
       "x-go-name": "ChannelList",
       "x-go-package": "github.com/hyperledger/fabric/orderer/common/types"
+    },
+    "spec": {
+      "type": "object",
+      "properties": {
+        "spec": {
+          "type": "string",
+          "x-go-name": "Spec"
+        }
+      },
+      "x-go-name": "LogSpec",
+      "x-go-package": "github.com/hyperledger/fabric/common/flogging/httpadmin"
     }
   },
   "tags": [
     {
       "description": "Channel Participation APIs",
       "name": "channels"
+    },
+    {
+      "description": "Operations APIs",
+      "name": "operations"
     }
   ]
 }
